--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="game_over">Game Over</string>
     <string name="next_match">Next Match</string>
     <string name="try_again">Try Again?</string>
+    <string name="play">Play</string>
     <string name="position">Position</string>
     <string name="select_an_avatar">Select an Avatar</string>
     <string name="android_trivia">Android Trivia</string>
